# TeamChat

./: .gitignore  README.md  autodeploy.sh  docker-compose.yml  部署指南.txt
auto_setup/nginx_php/php/: setup.sh
db/: Dockerfile
pb/: create.sh
php/: install.sh  teamtalk.conf
php/application/config/: database.php
server/run/: restart.sh
server/src/: CMakeLists.txt  build_ubuntu.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  sync_conf.sh
server/src/base/: cmake_install.cmake
server/src/db_proxy_server/: CMakeLists.txt  db_proxy_server.cpp  dbproxyserver.conf
server/src/file_server/: CMakeLists.txt  file_server.cpp
server/src/log4cxx/: domtestcase.cpp  loggingevent.cpp  objectoutputstream.cpp
server/src/log4cxx/apache-log4cxx-0.10.0/src/main/cpp/: locationinfo.cpp
server/src/login_server/: CMakeLists.txt
server/src/msfs/: FileManager.cpp
server/src/msg_server/: CMakeLists.txt
server/src/push_server/: CMakeLists.txt
server/src/route_server/: CMakeLists.txt
