cmake_minimum_required(VERSION 2.6)
PROJECT(loginserver)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${BASE_DIR}/)

#SET(LIBRARY_OUTPUT_PATH ./)
SET(EXECUTABLE_OUTPUT_PATH  ./)
if(APPLE)
    SET(PB_LIB_DIR ${BASE_DIR}/pb/lib/mac)
elseif(UNIX)
    SET(PB_LIB_DIR ${BASE_DIR}/pb/lib/linux)
endif()

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${BASE_DIR} ${BASE_DIR}/pb/protocol ${BASE_DIR}/jsoncpp/ ${BASE_DIR}/pb/)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${BASE_DIR} ${PB_LIB_DIR} ${BASE_DIR}/slog/lib)

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
ADD_EXECUTABLE(login_server ${SRC_LIST})

TARGET_LINK_LIBRARIES(login_server base protobuf-lite slog pthread) 
